<resources>
    <string name="app_name">IMCCalculator</string>
    <string name="women_sign">Women Sign</string>
    <string name="hombre">Hombre</string>
    <string name="male_sign">Male Sign</string>
    <string name="mujer">Mujer</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="edad">edad</string>
    <string name="calcular">calcular</string>
    <string name="tu_resultado">Tu resultado</string>
    <string name="re_calcular">Re-calcular</string>

    <string name="error"></string>

    <string name="title_bajo_peso">Bajo Peso</string>
    <string name="description_bajo_peso">Estás por debajo de lo óptimo para tu peso y altura</string>


    <string name="title_peso_normal"> Normal</string>
    <string name="description_peso_normal">Estás por en lo óptimo para tu peso y altura</string>


    <string name="title_sobre_peso">Sobre Peso</string>
    <string name="description_sobre_peso">Estás por encima de lo óptimo para tu peso y altura</string>


    <string name="title_obesidad">Obesidad</string>
    <string name="description_obesidad">Estás MUY por encima de lo óptimo para tu peso y altura</string>

</resources>